# rust-backend

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: main.rs  main_server.rs  my_module.rs
src/bounded_context/: mod.rs
src/bounded_context/application/: create_task.rs  finish_task.rs  mod.rs  start_task.rs
src/bounded_context/builders/: create_task_builder.rs  finish_task_builder.rs  mod.rs  start_task_builder.rs
src/bounded_context/domain/: mod.rs  task.rs  task_repository.rs  task_status.rs
src/bounded_context/infrastructure/: bootstrapper.rs  in_memory_task_repository.rs  mod.rs  mysql_task_mapper.rs  mysql_task_repository.rs  repository_error.rs  service_container.rs
src/bounded_context/infrastructure/config/: app_config.rs
src/bounded_context/infrastructure/http/: configure_routes.rs  create_task_controller.rs  finish_task_controller.rs  hello_world_controller.rs  index_controller.rs  mod.rs  start_task_controller.rs  task_response.rs  tmp_controller.rs
src/bounded_context/infrastructure/mysql/: mod.rs  mysql_task_mapper.rs  mysql_task_repository.rs  task.sql  task_from_persistence.rs
src/bounded_context/mocks/: mock_task_repository.rs  mod.rs
src/my_module/: divisible.rs
tests/: create_task_controller_test.rs  finish_task_controller_test.rs  index_controller_test.rs  start_task_controller_test.rs  tmp_controller_test.rs
