[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "process"
test = true
path = "src/main.rs"

[[bin]]
name = "server"
test = true
path = "src/main_server.rs"

[dependencies]
rand = "^0.8"
mysql = "^24.0"
actix-web = "^4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
dotenv = "^0.15"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
actix-rt = "2.2"
actix-web = "4.0"
